fix network overflow

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,3 +4,11 @@
   display: flex;
   background-color: #fff;
 }
+
+.controller {
+  flex: 0 100px;
+}
+
+.network {
+  flex: 1;
+}
