--- a/components/Controller.module.css
+++ b/components/Controller.module.css
@@ -1,4 +1,4 @@
-.controller {
+.main {
   display: flex;
   flex-direction: column;
 }
