--- a/components/Network.module.css
+++ b/components/Network.module.css
@@ -1,5 +1,4 @@
 .container {
-  flex-grow: 1;
   width: 100%;
   height: 100%;
   margin: 0;
